// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Single place and single stat var 1`] = `
"<div class=\\"card\\">
  <div class=\\"chart-svg\\"></div>
  <div class=\\"chart-options\\"><button type=\\"button\\" class=\\"source-selector-open-modal-button btn btn-light btn-sm\\">Edit Source</button>
    <div><span class=\\"chart-option\\"><button id=\\"pc-cb-age\\" class=\\"option-checkbox\\"></button><label for=\\"pc-cb-age\\">Ratio of </label><input disabled=\\"\\" placeholder=\\"Count_Person\\"></span><span class=\\"chart-option\\"><button id=\\"delta-cb-age\\" class=\\"option-checkbox\\"></button><label for=\\"delta-cb-age\\">Delta</label></span></div>
  </div>
  <div class=\\"statVarChipRegion\\">
    <div class=\\"pv-chip mdl-chip--deletable\\"><span class=\\"mdl-chip__text\\">Age</span><button class=\\"mdl-chip__action\\"><i class=\\"material-icons\\">cancel</i></button></div>
  </div>
</div>"
`;

exports[`Single place and single stat var 2`] = `
"<div class=\\"card\\">
  <div class=\\"chart-svg\\"></div>
  <div class=\\"chart-options\\"><button type=\\"button\\" class=\\"source-selector-open-modal-button btn btn-light btn-sm\\">Edit Source</button>
    <div><span class=\\"chart-option\\"><button id=\\"pc-cb-age\\" class=\\"option-checkbox\\"></button><label for=\\"pc-cb-age\\">Ratio of </label><input disabled=\\"\\" placeholder=\\"Count_Person\\"></span><span class=\\"chart-option\\"><button id=\\"delta-cb-age\\" class=\\"option-checkbox\\"></button><label for=\\"delta-cb-age\\">Delta</label></span></div>
  </div>
  <div class=\\"statVarChipRegion\\">
    <div class=\\"pv-chip mdl-chip--deletable\\"><span class=\\"mdl-chip__text\\">Age</span><button class=\\"mdl-chip__action\\"><i class=\\"material-icons\\">cancel</i></button></div>
  </div>
</div>"
`;

exports[`Single place and single stat var 3`] = `
"<div class=\\"Collapsible\\"><span class=\\"Collapsible__trigger is-open\\"><div class=\\"node-title\\"><i class=\\"material-icons\\">remove</i><span class=\\"title selected-node-title\\">Demographics<span class=\\"sv-count\\">(100)</span></span></div></span>
<div class=\\"Collapsible__contentOuter\\" style=\\"height: 0px; transition: height 200ms linear; overflow: hidden;\\">
  <div class=\\"Collapsible__contentInner\\">
    <div class=\\"svg-node-child\\">
      <div>
        <form class=\\"node-title\\"><input id=\\"Count_Persondc/g/Demographics-Count_Person\\" name=\\"stat-var-hierarchy\\" type=\\"checkbox\\"><label class=\\"selected-node-title\\" for=\\"Count_Persondc/g/Demographics-Count_Person\\">Count Of Person</label></form>
      </div>
      <div>
        <form class=\\"node-title\\"><input id=\\"Median_Age_Persondc/g/Demographics-Median_Age_Person\\" name=\\"stat-var-hierarchy\\" type=\\"checkbox\\"><label class=\\"\\" for=\\"Median_Age_Persondc/g/Demographics-Median_Age_Person\\">Median age of person</label></form>
      </div>
    </div>
    <div class=\\"svg-node-child\\">
      <div>
        <div class=\\"Collapsible\\"><span class=\\"Collapsible__trigger is-closed\\"><div class=\\"node-title\\"><i class=\\"material-icons\\">add</i><span class=\\"title\\">Age<span class=\\"sv-count\\">(5)</span></span></div></span>
        <div class=\\"Collapsible__contentOuter\\" style=\\"height: 0px; transition: height 200ms linear; overflow: hidden;\\">
          <div class=\\"Collapsible__contentInner\\"></div>
        </div>
      </div>
    </div>
    <div>
      <div class=\\"Collapsible\\"><span class=\\"Collapsible__trigger is-closed\\"><div class=\\"node-title\\"><i class=\\"material-icons\\">add</i><span class=\\"title\\">ArmedForcesStatus<span class=\\"sv-count\\">(5)</span></span></div></span>
      <div class=\\"Collapsible__contentOuter\\" style=\\"height: 0px; transition: height 200ms linear; overflow: hidden;\\">
        <div class=\\"Collapsible__contentInner\\"></div>
      </div>
    </div>
  </div>
</div>
</div>
</div>
</div>
<div class=\\"Collapsible\\"><span class=\\"Collapsible__trigger is-closed\\"><div class=\\"node-title\\"><i class=\\"material-icons\\">add</i><span class=\\"title\\">Economics<span class=\\"sv-count\\">(100)</span></span></div></span>
<div class=\\"Collapsible__contentOuter\\" style=\\"height: 0px; transition: height 200ms linear; overflow: hidden;\\">
  <div class=\\"Collapsible__contentInner\\"></div>
</div>
</div>"
`;

exports[`chart options 1`] = `
"<div class=\\"card\\">
  <div class=\\"chart-svg\\"></div>
  <div class=\\"chart-options\\"><button type=\\"button\\" class=\\"source-selector-open-modal-button btn btn-light btn-sm\\">Edit Source</button>
    <div><span class=\\"chart-option\\"><button id=\\"pc-cb-count\\" class=\\"option-checkbox\\"></button><label for=\\"pc-cb-count\\">Ratio of </label><input disabled=\\"\\" placeholder=\\"Count_Person\\"></span><span class=\\"chart-option\\"><button id=\\"delta-cb-count\\" class=\\"option-checkbox\\"></button><label for=\\"delta-cb-count\\">Delta</label></span></div>
  </div>
  <div class=\\"statVarChipRegion\\">
    <div class=\\"pv-chip mdl-chip--deletable\\"><span class=\\"mdl-chip__text\\">Population</span><button class=\\"mdl-chip__action\\"><i class=\\"material-icons\\">cancel</i></button></div>
  </div>
</div>"
`;

exports[`statVar not in PV-tree 1`] = `
"<div class=\\"card\\">
  <div class=\\"chart-svg\\"></div>
  <div class=\\"chart-options\\"><button type=\\"button\\" class=\\"source-selector-open-modal-button btn btn-light btn-sm\\">Edit Source</button>
    <div><span class=\\"chart-option\\"><button id=\\"pc-cb-count\\" class=\\"option-checkbox\\"></button><label for=\\"pc-cb-count\\">Ratio of </label><input disabled=\\"\\" placeholder=\\"Count_Person\\"></span><span class=\\"chart-option\\"><button id=\\"delta-cb-count\\" class=\\"option-checkbox\\"></button><label for=\\"delta-cb-count\\">Delta</label></span></div>
  </div>
  <div class=\\"statVarChipRegion\\">
    <div class=\\"pv-chip mdl-chip--deletable\\"><span class=\\"mdl-chip__text\\"></span><button class=\\"mdl-chip__action\\"><i class=\\"material-icons\\">cancel</i></button></div>
  </div>
</div>"
`;

exports[`statVar not in PV-tree 2`] = `
"<div class=\\"Collapsible\\"><span class=\\"Collapsible__trigger is-closed\\"><div class=\\"node-title\\"><i class=\\"material-icons\\">add</i><span class=\\"title\\">Demographics<span class=\\"sv-count\\">(100)</span></span></div></span>
<div class=\\"Collapsible__contentOuter\\" style=\\"height: 0px; transition: height 200ms linear; overflow: hidden;\\">
  <div class=\\"Collapsible__contentInner\\"></div>
</div>
</div>
<div class=\\"Collapsible\\"><span class=\\"Collapsible__trigger is-closed\\"><div class=\\"node-title\\"><i class=\\"material-icons\\">add</i><span class=\\"title\\">Economics<span class=\\"sv-count\\">(100)</span></span></div></span>
<div class=\\"Collapsible__contentOuter\\" style=\\"height: 0px; transition: height 200ms linear; overflow: hidden;\\">
  <div class=\\"Collapsible__contentInner\\"></div>
</div>
</div>"
`;
